# repo-summarizer

./: .env.example  LICENSE  pyproject.toml  repo-summarizer.json
repo_summarizer/: main.py  models.py  output.py  repository.py  summarize.py  tokens.py
tests/: output.py  repository.py
